--- a/videogame-shop/src/style.css
+++ b/videogame-shop/src/style.css
@@ -11,6 +11,8 @@
 
 .right {
     margin-right: 50px;
+    display: flex;
+    align-items: center;
 }
 
 nav {
@@ -179,5 +181,19 @@ nav {
 }
 
 .price-tag {
+    color: #FFF2E1;
+}
+
+#cart-counting {
+    position: relative;
+    top: 12px;
+    left: -5px;
+    background-color: #A79277;
+    height: 25px;
+    width: 25px;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: #FFF2E1;
 }
